# labware

./: .editorconfig  .gitignore  .releaserc  LICENSE  Makefile  README.md  pyproject.toml
pkg/primary/: pyenv  pyenv.py  pyenv.sh  update
scr/: install  install.py
src/labware/: .default.cfg  __init__.py  cli.py  config.py  console.py  install.py  logger.py  package.py  registry.py  system.py  utils.py
src/labware/storage/: __init__.py  models.py  serializer.py  sqlcache.py  sqlite.py  utils.py  zstd.py
src/labware/templates/: .gitconfig  sshd_config
sys/dots/: .bashrc
sys/dots/.bashrc.d/: 10-env.bash  15-common.bash  20-functions.bash  40-aliases.bash  50-completions.bash
